Fix UI and Backend Issue for Filters